only pass "-std=c++0x"  to the c++ compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,8 +152,10 @@ INCLUDE(CPack)
 # DEFINES ######################################################################
 ################################################################################
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
+# C++14: set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive" )
 
-add_definitions( -std=c++0x )
 
 if (VSXU_STATIC EQUAL 1)
   add_definitions(-g)
