--- a/engine/test/CMakeLists.txt
+++ b/engine/test/CMakeLists.txt
@@ -2,14 +2,16 @@ cmake_minimum_required(VERSION 2.8)
 
   add_definitions(
     -g
-    -Wall
     -Wtype-limits
-    -fpermissive
+    #-fpermissive # UNIX only, and should no longer be needed
     -Wuninitialized
     -Wignored-qualifiers
     -Wempty-body
     -Wunused-parameter
   )
+if(WIN32)
+  add_definitions( -Wno-error ) # vsxfst WIN32
+endif(WIN32)
 
 include_directories(
 ${CMAKE_SOURCE_DIR}/../include
