only set -std=c++0x for c++, it yelds a warning/error when passed to cc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,8 +152,8 @@ INCLUDE(CPack)
 # DEFINES ######################################################################
 ################################################################################
 
-
-add_definitions( -std=c++0x )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
+# C++14: set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
 if (VSXU_STATIC EQUAL 1)
   add_definitions(-g)
