--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,9 @@ if(VSXU_DEBUG)
   )
 else(VSXU_DEBUG)
   if (OPTIMIZATION_FLAGS EQUAL 1)
+    if(UNIX)
+      add_definitions( -fno-delayed-branch )
+    endif(UNIX)
     add_definitions(
       -DVSX_OPTIMIZATIONS=1
       -mtune=nocona
@@ -193,7 +196,6 @@ else(VSXU_DEBUG)
       -O3
       -fno-thread-jumps 
       -fno-if-conversion2 
-      -fno-delayed-branch 
       -fno-loop-optimize 
       -ftree-dce 
       -ftree-sra 
@@ -233,6 +235,9 @@ else(VSXU_DEBUG)
     )
   else (OPTIMIZATION_FLAGS EQUAL 1)
     if (VSXU_BUILD_WINDOWS_32)
+        if(UNIX)
+          add_definitions( -fno-delayed-branch )
+        endif(UNIX)
         add_definitions(
 #from O1
           -fauto-inc-dec
@@ -240,7 +245,6 @@ else(VSXU_DEBUG)
           -fcprop-registers
           -fdce
           -fdefer-pop
-          -fdelayed-branch
           -fdse
           -fguess-branch-probability
           -fif-conversion2
@@ -313,7 +317,6 @@ else(VSXU_DEBUG)
           -fcprop-registers
           -fdce
           -fdefer-pop
-          -fdelayed-branch
           -fdse
           -fguess-branch-probability
           -fif-conversion2
