downgrade some error's to warnings in mesh.importers so that the project can be compiled with -Werror

--- a/plugins/src/mesh.importers/CMakeLists.txt
+++ b/plugins/src/mesh.importers/CMakeLists.txt
@@ -13,6 +13,15 @@ add_definitions(-DCAL3D_EXPORTS)
 if(UNIX)
   add_definitions( -fPIC )
 endif(UNIX)
+add_definitions(
+   -Wno-error=narrowing
+   -Wno-error=vla
+   -Wno-error=parentheses
+   -Wno-error=unused-but-set-variable
+   #-----------------------------------
+   -Wno-error=return-local-addr # FIXME
+   -Wno-error=unknown-pragmas   # FIXME
+   )
 
 include_directories(cal3d/cal3d/src)
 
