downgrade an error to warning in "engine" so project can be compiled with -Werror

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -218,3 +218,8 @@ endif()
 target_link_libraries(${module_id}
   ${DL_LIBRARY}
 )
+
+add_definitions( -Wno-parentheses ) # LZMA
+#if (WIN32)
+  add_definitions( -Wno-error=int-to-pointer-cast ) # FIXME
+#endif()
